spec/e2e/self/self_in_top_level_function.lit
fn foo {
  self # error: [line 2] Syntax error at "self": Can't use 'self' outside of a type.
}
